[package]
name = "juno_grpc_query"
authors = ["Sascha <1337@wasm.host>"]
version = "0.1.0"
edition = "2021"

[dependencies]

tokio-rustls = "0.26.0"
futures = "0.3"
tonic = { version = "0.11", features = ["default","tls-webpki-roots"] }
tokio = { version = "1", features = ["full"] }
cosmos-sdk-proto = { version = "0.21", features=["cosmwasm", "grpc-transport"] }
prost-types = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.25", features = ["default","aio","tokio-comp"] }
log = "0.4"
tonic-openssl = "0.2"
openssl =  "0.10"
hyper-tls = "0.6"
cosmwasm-std = "2.0.4"
cw721 = "0.18"
serde_with = "3.8.1"
